feat (config): initial setup

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Kactus Test
+description: Kactus test for future adoption
+meta_description: "Kactus test for future adoption"
 
 aboutPage: true
 
@@ -9,15 +9,15 @@ highlighter: rouge
 
 plugins: [jekyll-paginate]
 paginate: 20
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://www.ic.unicamp.br/~santanche'
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
-disqus_shortname: 'your-disqus-shortname'
+disqus_shortname: 'santanche'
 
 # Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
+url:            'http://www.ic.unicamp.br/~santanche'
+author:         'André Santanchè'
+authorTwitter:  'santanche'
 
 permalink:       /:year/:title/
 
@@ -40,5 +40,3 @@ defaults:
             type: drafts
         values:
             layout: post
-
-theme: jekyll-theme-minimal
