--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,12 @@ defaults:
             path: "" # empty string for all files
             type: pages
         values:
+            layout: default
+    -
+        scope:
+            path: "docs"
+            type: pages
+        values:
             layout: default-minimal
     -
         scope:
